<?xml version="1.0"?>
<package format="2">
  <name>ud_path_follower</name>
  <version>0.0.0</version>
  <description>The path_follower package</description>

  <maintainer email="kleiobax@udel.edu">Kleio Baxevani</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>geometry_msgs</depend>
  <depend>geographic_visualization_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>pluginlib</depend>
  <depend>project11</depend>
  <depend>project11_navigation</depend>
  <depend>roscpp</depend>
  
  <export>
    <project11_navigation plugin="${prefix}/ud_path_follower_nav_plugin.xml"/>
  </export>
</package>
